bluez (5.55-2) UNRELEASED; urgency=medium

  * Update d/control.
    * Use debhelper-compat instead of debhelper, and update to 13.\
    * Bump Standards-Version to 4.5.1 (no change).
  * Update d/rules.
    Drop unnecessary autoreconf option for dh.
  * Update d/patches/allow-using-obexd-without-systemd-in-the-user-sessio.patch
    Fix path of obexd. (Closes: #972070, #971533)
  * Remove d/compat.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Mon, 21 Dec 2020 08:08:53 +0900

bluez (5.55-1) unstable; urgency=medium

  * Update to 5.55.
  * Remove patches applied in upstream.
    - input-hog-Attempt-to-set-security-level-if-not-bonde.patch
    - input-Add-LEAutoSecurity-setting-to-input.conf.patch
  * Add --enable-hid2hci to configure's option.
    Add --enable-hid2hci option to explicitly enable the hid2hci tool.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Wed, 16 Sep 2020 16:49:56 +0900

bluez (5.54-1) unstable; urgency=medium

  * Update to 5.54. (Closes: #946711, #966564, #925369)
  * Update d/libbluetooth3.symbols.
  * Delete unnecessary patches.
  * Add zsh completion file to bluez. (Closes: #954281)
    Thanks to Laurent Bigonville <bigon@debian.org>.
  * Omit bluez-cups on Ubuntu/i386. (Closes: #947084)
    Thanks to Steve Langasek <steve.langasek@canonical.com>.
  * Fix typo in d/bluez.bluetooth.default. (Closes: #959483)
    Thanks to Vincent Lefevre <vincent@vinc17.net>.
  * Move daemon to /usr/libexec/bluetooth instead of /usr/lib/bluetooth.
    (Closes: #954282)
    Thanks to Laurent Bigonville <bigon@debian.org>.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sun, 30 Aug 2020 06:48:15 +0900

bluez (5.52-1) experimental; urgency=medium

  * Update to 5.52.
  * Add bluez-source package.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Wed, 13 Nov 2019 13:26:08 +0900

bluez (5.51-1) experimental; urgency=medium

  * Update to 5.51.
  * Fix lintian warnings:
    - skip-systemd-native-flag-missing-pre-depends.
    - executable-not-elf-or-script.