@@ -36,12 +36,9 @@ ifeq ($(shell dpkg-vendor --is Ubuntu && echo yes) $(DEB_HOST_ARCH), yes i386)
 endif
 
 %:
-	dh $@
+	dh $@ --exclude=.la
 
 override_dh_install:
-	rm -rf  debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/libbluetooth.la
-	rm -rf  debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/bluetooth/plugins/sixaxis.la
-
 	# Remove test scripts, and these are taken directly into the package
 	# from the test directory
 	rm -rf debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/bluez
